data/derived/fa15/progs/unify/prog2251.ml.out
Characters 154-155:
  List.fold_left f base l;;
                        ^
Error: This expression has type string list
       but an expression was expected of type (string -> string) list
       Type string is not compatible with type string -> string 
